src/main/java/org/example/error/BindingCannotResolvedException.java
package org.example.error;

public class BindingCannotResolvedException extends Exception {
    public BindingCannotResolvedException(String message) {
        super(message);
    }
}
